--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
         <title>Skullz</title>
 
         <link href="main.css" rel="stylesheet" />
-        
+
     </head>
     <body>
         <header class="header">
-            <h1>Skullz</h1>
+            <div class="logo-box">
+                <!-- logo img -->
+                <img src="assets/logo.jpg" class="logo" alt="skullz-logo"/>
+            </div>
+
+            <div class="text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary-main">Skullz</span>
+                    <span class="heading-primary-sub">Athlete Lifestyle</span>
+                </h1>
+            </div>
+
         </header>
+
 
         <footer>
             made by <a href="kaibrabo.com">KB</a>
